Setting up RequireJs client side and beginning to flesh out site

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -1,8 +1,20 @@
 <html>
 <head>
-    <title>Welcome to The Golden Bear</title>
+    <title>Welcome to The Golden Bear Tavern</title>
+    <script data-main="scripts/main.js" src="scripts/require.js"></script>
 </head>
 <body>
-    
+
+    <h1>Welcome to the Golden Bear Tavern</h1>
+    <nav>
+        <a href="./menu.html">Menu</a>
+        <a href="./drinks.html">Drinks</a>
+        <a href="./events.html">Events</a>
+        <a href="./contact.html">Contact Info</a>
+    </nav>
+    <img src="./images/goldenbear.jpg" alt="The Golden Bear">
+    <p>The Golden Bear Tavern is a fine eating and drinking establishment located
+       in beautiful West Middlesex, PA.
+    <p>
 </body>
 </html>
