--- a/app/public/menu.html
+++ b/app/public/menu.html
@@ -1,11 +1,19 @@
 <html>
 <head>
     <title>Menu</title>
+    <script data-main="scripts/main.js" src="scripts/require.js"></script>
 </head>
 <body bgcolor="#CCFFFF">
     <a href="./index.html">Home</a>
     <h1>Appetizers</h1>
     <h1>Lunch</h1>
+        <table id="food">
+            <tr>
+                <th>Id</th>
+                <th>Name</th>
+                <th>Price</th>
+            </tr>
+        </table>
     <h1>Diner</h1>
     <h1>Specials</h1>
 </body>
